# x11z

./: README.md  config.py  english_app.db  main.py  pyproject.toml
api/depends/: session_dep.py
api/routers/: words.py  words_api.py  words_web.py
database/: session.py
models/: __init__.py  base.py  words.py
repository/: words.py
schemas/: words.py
services/: words.py
static/: style.css
templates/: index.html
utils_backend/: export_anki.py  remove_file.py  translater.py
