[project]
name = "english-helper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.14.1",
    "aiosqlite>=0.22.1",
    "alembic>=1.18.5",
    "fastapi>=0.138.1",
    "genanki>=0.13.1",
    "jinja2>=3.1.6",
    "pydantic-settings>=2.14.2",
    "python-multipart>=0.0.32",
    "sqlalchemy>=2.0.51",
    "uvicorn>=0.49.0",
]
